--- a/flow/Makefile
+++ b/flow/Makefile
@@ -278,7 +278,7 @@ YOSYS_FLAGS += -v 3
 TIME_CMD = env time -f 'Elapsed time: %E[h:]min:sec. CPU time: user %U sys %S (%P). Peak memory: %MKB.'
 TIME_TEST = $(shell $(TIME_CMD) echo foo 2>/dev/null)
 ifeq (, $(strip $(TIME_TEST)))
-  TIME_CMD = time
+  TIME_CMD = env time
 endif
 
 # The following determine the executable location for each tool used by this flow.
